# larcore

./: CMakeLists.txt  CMakePresets.json  README.md
larcore/: CMakeLists.txt
larcore/CoreUtils/: CMakeLists.txt  EnsureOnlyOneSchedule.h  ServiceProviderWrappers.h  ServiceUtil.h
larcore/Geometry/: AuxDetExptGeoHelperInterface.h  AuxDetGeoObjectSorterStandard_tool.cc  AuxDetGeometry.cc  AuxDetGeometry.h  AuxDetGeometry_service.cc  CMakeLists.txt  ChannelMapSetupTool.h  DumpChannelMap_module.cc  DumpGeometry_module.cc  ExptGeoHelperInterface.h  GeoObjectSorterStandard_tool.cc  Geometry.cc  Geometry.h  GeometryConfigurationWriter_service.cc  Geometry_service.cc  StandardGeometryHelper.cc  StandardGeometryHelper.h  StandardGeometryHelper_service.cc  StandardWireReadout.cc  StandardWireReadout.h  StandardWireReadout_service.cc  WireReadout.h  WireReadoutSetupTool.h  WireReadoutSorterStandard_tool.cc  geometry.fcl  geometry_bo.fcl  geometry_csu40L.fcl  geometry_icarus_old.fcl  geometry_jp250L.fcl
larcore/Geometry/gdml/: CMakeLists.txt  bo_geo.C  voltpc_geo.C
test/: CMakeLists.txt
test/CoreUtils/: CMakeLists.txt  ServiceUtil_test.cc
test/Geometry/: CMakeLists.txt  GeometryIteratorLoopTest_module.cc  GeometryTest_module.cc  dump_lartpcdetector_channelmap.fcl
test/Geometry/VersionCheck/: CMakeLists.txt  GeometryInfoCheck_module.cc  LegacyGeometryInfoWriter_module.cc  test_geometries.fcl  test_geometry_check_empty.fcl  test_geometry_check_geometryA_skipCheck.fcl  test_geometry_check_geometryB_skipCheck.fcl  test_geometry_check_make_legacy_input.fcl  test_geometry_check_nogeoconfwriter.fcl  test_geometry_check_nogeoconfwriter_skipcheck.fcl  test_geometry_check_require_geometryA.fcl  test_geometry_check_require_geometryB.fcl  test_geometry_checks.fcl
ups/: product_deps  setup_for_development
